# zenmlplayground

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  docker-compose_tmp.yml  pyproject.toml
configs/: trainingpipeline.yaml
docker/: Dockerfile  Dockerfile.airflow  Dockerfile.mlflow  Dockerfile.registry  Dockerfile.zenml  symlink
logs/scheduler/: airflow
scripts/: init-airflow.sh  init-minio.sh  init-mysql-db.sh  init-registry.sh
src/zenmlplayground/: __init__.py  models.py  steps.py  test.py
src/zenmlplayground/pipelines/: printigpipeline.py  simpleml.py  trainingpipeline.py  trainingpipeline2.py  trainingpipeline3.py
