[project]
name = "zenmlplayground"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nils Uhrberg", email = "nils.uhrberg@codecentric.de" }
]
dependencies = [
    "zenml[server]>=0.65.0",
    "setuptools>=74.0.0",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.1",
    "s3>=3.0.0",
    "s3fs>=2024.6.1",
    "pip>=24.2",
    "pygithub>=2.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zenmlplayground"]
